--- a/notebooks/British_Airways_Reviews.ipynb
+++ b/notebooks/British_Airways_Reviews.ipynb
@@ -247,7 +247,7 @@
    ],
    "source": [
     "# load the data\n",
-    "df = pd.read_csv('British_Airways_Reviews.csv', index_col=0)\n",
+    "df = pd.read_csv('data/British_Airways_Reviews.csv', index_col=0)\n",
     "df.head()"
    ]
   },
